--- a/style.css
+++ b/style.css
@@ -7,17 +7,17 @@
 }
 
 .box {
-  border: 1px solid grey;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  /* transition: all 0.3s cubic-bezier(.25,.8,.25,1); */
   text-align: center;
   margin: 10px;
   font-size: 2em;
+  font-family: sans-serif;
   padding: 10px;
+  color: grey;
 }
 
 .time {
   display: block;
   color: black;
-}
-.box:not(.time) {
-  color: grey;
 }
