--- a/public/style.css
+++ b/public/style.css
@@ -4,20 +4,21 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .box {
-  border: 1px solid grey;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   text-align: center;
   margin: 10px;
-  font-size: 2em;
+  font-size: 3em;
+  font-family: sans-serif;
   padding: 10px;
+  color: grey;
+  text-transform: capitalize;
 }
 
 .time {
   display: block;
   color: black;
-}
-.box:not(.time) {
-  color: grey;
 }
